--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "type": "git",
     "url": "git+https://github.com/ecvdbdx/ouvrage.git"
   },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ]
+  },
   "lint-staged": {
     "src/**/*.{js,jsx,json}": [
       "eslint",
@@ -33,6 +38,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-react": "^7.7.0",
