--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "joi": "^13.2.0",
     "moment": "^2.22.1",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-tabs": "^2.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
