--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "joi": "^13.2.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
