--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "MIT",
   "dependencies": {
     "joi": "^13.2.0",
+    "moment": "^2.22.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1"
   },
